<resources>
    <string name="app_name">Handmade</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offers">offers</string>
    <string name="new_products">new_products</string>
    <string name="myorder">myorder</string>

    <string name="Offers">Offers</string>
    <string name="New_Products">New Products</string>
    <string name="my_order">My Order</string>
    <string name="my_carts">My Carts</string>
    <string name="Profile">Profile</string>
    <string name="Category">Category</string>
    <string name="log_out">Log out</string>
</resources>