<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="vn.udn.vku.nmtri.handmade.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="vn.udn.vku.nmtri.handmade.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_category"
        android:name="vn.udn.vku.nmtri.handmade.ui.category.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_offers"
        android:name="vn.udn.vku.nmtri.handmade.OffersFragment"
        android:label="@string/Offers"
        tools:layout="@layout/fragment_offers" />
    <fragment
        android:id="@+id/nav_new_products"
        android:name="vn.udn.vku.nmtri.handmade.NewProductsFragment"
        android:label="@string/New_Products"
        tools:layout="@layout/fragment_new_products" />
    <fragment
        android:id="@+id/nav_myorder"
        android:name="vn.udn.vku.nmtri.handmade.MyOrderFragment"
        android:label="@string/my_order"
        tools:layout="@layout/fragment_my_order" />
    <fragment
        android:id="@+id/nav_my_carts"
        android:name="vn.udn.vku.nmtri.handmade.MyCartsFragment"
        android:label="@string/my_carts"
        tools:layout="@layout/fragment_my_carts" />
</navigation>