<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menuhome"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/menu_person"
            android:title="@string/Profile" />

        <item
            android:id="@+id/nav_myorder"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/my_order" />
        <item
            android:id="@+id/nav_my_carts"
            android:icon="@drawable/mycart"
            android:title="@string/my_carts" />


    </group>
</menu>